Add fixed adaptive background with natural scrolling content

--- a/bedrock/firefox/templates/firefox/os/index.html
+++ b/bedrock/firefox/templates/firefox/os/index.html
@@ -80,9 +80,11 @@
   <div class="item-wrapper" id="every-moment">
     <div class="item phone-item" id="phone-item-intro">
       <div class="phone-wrapper" id="phone-wrapper-intro">
-        <div class="phone"></div>
-        <div id="screen-intro" class="screen-wrapper">
-          <div id="screen-intro-a" class="screen screen-birthday"></div>
+        <div id="phone-hook">
+          <div class="phone"></div>
+          <div id="screen-intro" class="screen-wrapper">
+            <div id="screen-intro-a" class="screen screen-birthday"></div>
+          </div>
         </div>
         <div id="fox-wrapper-intro" class="fox-wrapper">
           <div class="fox"></div>
@@ -112,6 +114,7 @@
   </div>
 
   <div id="adaptive-wrapper">
+    <div id="adaptive-bg" class="bg-soccer"></div>
     <div id="adaptive-app-search">
       <div id="scenes">
         <div class="item-wrapper bg-soccer nav-anchor" id="adapt1">
@@ -178,7 +181,7 @@
     <div id="birthday-hook" class="item scene-hook"></div>
   </div>
 
-  <div id="fox-tail-tip"></div>
+  <!-- <div id="fox-tail-tip"></div> -->
 </div><!--/#get-firefox-os-->
 
 <div id="have-it-all" class="nav-anchor">
