--- a/media/css/firefox/os/firefox-os-ie.less
+++ b/media/css/firefox/os/firefox-os-ie.less
@@ -20,11 +20,12 @@
   -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src=/media/img/firefox/os/bg/1400/birthday.jpg, sizingMethod='scale')";   
 }
 
-#masthead {
-  .curr:before,
-  .curr:after {
-    border: none;
-  }
+#adaptive-wrapper.scroller-on {
+    #adapt1, #adapt2, #adapt3 {
+      background: transparent;
+      filter: none;
+      -ms-filter: none;
+    }
 }
 
 // fix ie7 z-index bug
@@ -32,7 +33,7 @@
   .item {
     z-index: 5;
   }
-  #phone-item-intro {
-    z-index: 6;
+  #every-moment {
+    z-index: 5;
   }
 }
