Add fix for edge-case have-it-all bug

--- a/media/css/firefox/os/firefox-os.less
+++ b/media/css/firefox/os/firefox-os.less
@@ -590,6 +590,10 @@ html[lang="en-US"] #get-firefox-os {
     position: absolute;
   }
 
+  #phone-hook {
+    z-index: 2;
+  }
+
   .fox {
     position: absolute;
     top: 350px;
