Increase scrollTop delay time on load for chrome

--- a/media/css/firefox/os/firefox-os.less
+++ b/media/css/firefox/os/firefox-os.less
@@ -1049,6 +1049,15 @@ html[lang=hu] {
       display: none;
       visibility: hidden;
     }
+    .content {
+      padding-top: @baseLine * 3;
+    }
+    .content.wide {
+      margin-top: 0;
+    }
+    #social .icon-list {
+      margin-top: 0;
+    }
   }
   .plusslider-arrows {
     margin: 0;
