Begin fancy-ing up adaptive interaction. Unfinished, but functional.

--- a/bedrock/firefox/templates/firefox/os/index.html
+++ b/bedrock/firefox/templates/firefox/os/index.html
@@ -114,11 +114,15 @@
   </div>
 
   <div id="adaptive-wrapper">
-    <div id="adaptive-bg" class="bg-soccer"></div>
+    <div id="adaptive-bgs">
+      <div id="adaptive-bg-soccer" class="adaptive-bg bg-soccer"></div>
+      <div id="adaptive-bg-cafe" class="adaptive-bg bg-cafe"></div>
+      <div id="adaptive-bg-birthday" class="adaptive-bg bg-birthday"></div>
+    </div>
+
     <div id="adaptive-app-search">
       <div id="scenes">
         <div class="item-wrapper bg-soccer nav-anchor" id="adapt1">
-          
           <div class="item phone-item" id="phone-item-soccer">
             <div class="phone-wrapper" id="phone-wrapper-soccer">
               <div class="phone"></div>
@@ -140,7 +144,6 @@
         </div>
 
         <div class="item-wrapper bg-cafe" id="adapt2">
-
           <div class="item phone-item" id="phone-item-cafe">
             <div class="phone-wrapper" id="phone-wrapper-cafe">
               <div class="phone"></div>
@@ -173,6 +176,10 @@
         </div>
       </div><!--/#scenes-->
     </div><!--/#adaptive-app-search-->
+
+    <div id="adaptive-mask">
+      <div id="fox-tail-tip"></div>
+    </div>
   </div><!--/#adaptive-wrapper-->
 
   <div id="scene-hooks">
@@ -180,8 +187,6 @@
     <div id="cafe-hook" class="item scene-hook"></div>
     <div id="birthday-hook" class="item scene-hook"></div>
   </div>
-
-  <!-- <div id="fox-tail-tip"></div> -->
 </div><!--/#get-firefox-os-->
 
 <div id="have-it-all" class="nav-anchor">
