--- a/media/css/firefox/os/firefox-os.less
+++ b/media/css/firefox/os/firefox-os.less
@@ -291,7 +291,7 @@ section p, header p {
     text-align: center;
     z-index: 2;
   }
-  #adaptive-bg {
+  #adaptive-bgs {
     display: none;
   }
   #adapt-features .content {
@@ -369,25 +369,36 @@ section p, header p {
     background: #0f9fdb;
 
     //sticky adaptive background while content scrolls naturally
-    #adaptive-bg {
+    #adaptive-bgs {
       display: block;
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 620px;
+      .adaptive-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 620px;
+        opacity: 0;
+        z-index: 1;
+        &.top {
+          z-index: 2;
+        }
+      }
+      #adaptive-bg-soccer {
+        opacity: 1;
+      }
     }
 
-    //fake have-it-all masthead while adaptive content is pinned
-    #adaptive-bg:after {
+    #adaptive-mask {
       position: absolute;
-      right: 0;
-      bottom: -1240px;
-      content: "";
+      top: 620px;
       width: 100%;
-      height: 1240px;
       background: #0f9fdb;
-      z-index: 100;
+      z-index: 5;
     }
 
     #keep-scrolling {
@@ -478,15 +489,15 @@ section p, header p {
     background: transparent;
   }
 
-  // #fox-tail-tip {
-  //   display: block;
-  //   position: fixed;
-  //   bottom: 0;
-  //   right: 0;
-  //   width: 604px;
-  //   height: 45px;
-  //   background: url('/media/img/firefox/os/adapt/fox-tail-tip.png') top right no-repeat;
-  // }
+  #fox-tail-tip {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 604px;
+    height: 45px;
+    background: url('/media/img/firefox/os/adapt/fox-tail-tip.png') top right no-repeat;
+  }
 }
 
 // sprites (dotted lines/plus) should essentially only show for en-US
