Add polish to updated adaptive interaction.

--- a/bedrock/firefox/templates/firefox/os/index.html
+++ b/bedrock/firefox/templates/firefox/os/index.html
@@ -177,9 +177,8 @@
       </div><!--/#scenes-->
     </div><!--/#adaptive-app-search-->
 
-    <div id="adaptive-mask">
-      <div id="fox-tail-tip"></div>
-    </div>
+    <div id="adaptive-mask"></div>
+    <div id="fox-tail-tip"></div>
   </div><!--/#adaptive-wrapper-->
 
   <div id="scene-hooks">
