--- a/media/css/firefox/os/firefox-os.less
+++ b/media/css/firefox/os/firefox-os.less
@@ -406,15 +406,15 @@ section p, header p {
     }
 
     #keep-scrolling {
-      position: fixed;
-      top: 645px;
+      position: absolute;
+      top: 550px;
       left: 50%;
-      margin-left: -12px;
+      margin-left: -48px;
       display: block;
       background: url('/media/img/firefox/os/adapt/keep-scrolling.png') no-repeat left top;
       width: 24px;
       height: 35px;
-      z-index: 100;
+      z-index: 1;
 
       -moz-animation: keep-scrolling 2s steps(25) infinite;
       -webkit-animation: keep-scrolling 2s steps(25) infinite;
@@ -533,12 +533,14 @@ html[lang="en-US"] #get-firefox-os {
     #adapt-feature-sprite-blue-line {
       top: 60px;
       left: -103px;
+      left: -93px; // hack to get dot to show
       height: 56px;
       background-position: left top;
     }
     #adapt-feature-sprite-orange-line {
       top: 173px;
       left: -103px;
+      left: -93px; // hack to get dot to show
       height: 12px;
       background-position: left -106px;
     }
@@ -1438,6 +1440,37 @@ html[lang="pl"] {
       left: 218px;
     }
   }
+  /*
+  // get sprites (dotted lines) to sit on top of phone
+  #adapt-feature-sprites {
+    position: absolute;
+    z-index: 11;
+    width: 100%;
+  }
+  .adapt-feature-sprite {
+      display: block;
+      width: 0;
+      z-index: -1;
+    }
+    #adapt-feature-sprite-blue-line {
+      top: 60px;
+      left: -103px;
+      height: 56px;
+      background-position: left top;
+    }
+    #adapt-feature-sprite-orange-line {
+      top: 173px;
+      left: -103px;
+      height: 12px;
+      background-position: left -106px;
+    }
+    #adapt-feature-sprite-plus {
+      opacity: 0;
+      width: 26px;
+      top: 200px; // animate to 286px
+    }
+  }
+  */
 }
 
 #colophon {
