Update adaptive interactions.
Enable active state on have it all nav links for large screens.

--- a/bedrock/firefox/templates/firefox/os/index.html
+++ b/bedrock/firefox/templates/firefox/os/index.html
@@ -113,9 +113,9 @@
 
   <div id="adaptive-wrapper">
     <div id="adaptive-bgs">
-      <div id="adaptive-bg-soccer" class="adaptive-bg bg-soccer"></div>
-      <div id="adaptive-bg-cafe" class="adaptive-bg bg-cafe"></div>
       <div id="adaptive-bg-birthday" class="adaptive-bg bg-birthday"></div>
+      <div id="adaptive-bg-cafe" class="adaptive-bg bg-cafe"></div>
+      <div id="adaptive-bg-soccer" class="adaptive-bg bg-soccer"></div>
 
       <a title="{{_('Scroll down')}}" href="#" id="keep-scrolling"></a>
     </div>
@@ -182,9 +182,9 @@
   </div><!--/#adaptive-wrapper-->
 
   <div id="scene-hooks">
-    <div id="soccer-hook" class="item scene-hook"></div>
-    <div id="cafe-hook" class="item scene-hook"></div>
     <div id="birthday-hook" class="item scene-hook"></div>
+    <div id="cafe-hook" class="item scene-hook"></div>
+    <div id="soccer-hook" class="item scene-hook"></div>
   </div>
 </div><!--/#get-firefox-os-->
 
@@ -250,7 +250,7 @@
       </section>
     </div>
 
-    <div class="item-wrapper" id="social">
+    <div class="item-wrapper hia-anchor" id="social">
       <section class="item">
         <div class="content left">
           <h2>{{_('Moments with friends')}}</h2>
@@ -267,7 +267,7 @@
       </section>
     </div>
 
-    <div class="item-wrapper" id="photos">
+    <div class="item-wrapper hia-anchor" id="photos">
       <section class="item">
         <div class="content left">
           <h2>{{_('Creative moments')}}</h2>
@@ -282,7 +282,7 @@
       </section>
     </div>
 
-    <div class="item-wrapper" id="music">
+    <div class="item-wrapper hia-anchor" id="music">
       <section class="item">
         <div class="content right">
           <h2>{{_('Moments that entertain')}}</h2>
@@ -298,7 +298,7 @@
       </section>
     </div>
 
-    <div class="item-wrapper" id="maps">
+    <div class="item-wrapper hia-anchor" id="maps">
       <section class="item">
         <div class="content left wide">
           <h2>{{_('Moments in between')}}</h2>
@@ -311,7 +311,7 @@
       </section>
     </div>
 
-    <div class="item-wrapper" id="messages">
+    <div class="item-wrapper hia-anchor" id="messages">
       <section class="item">
         <div class="content left messages-text">
           <h2>{{_('Moments of connection')}}</h2>
@@ -326,7 +326,7 @@
       </section>
     </div>
 
-    <div class="item-wrapper" id="marketplace">
+    <div class="item-wrapper hia-anchor" id="marketplace">
       <section class="item">
         <div class="content right wide">
           <h2>{{_('Moments of discovery')}}</h2>
