--- a/media/css/firefox/os/firefox-os.less
+++ b/media/css/firefox/os/firefox-os.less
@@ -392,7 +392,7 @@ section p, header p {
           z-index: 2;
         }
       }
-      #adaptive-bg-soccer {
+      #adaptive-bg-birthday {
         opacity: 1;
       }
     }
@@ -441,20 +441,9 @@ section p, header p {
 
     #adaptive-app-search {
       position: absolute;
-      top: 0;
+      top: 200px;
       left: 0;
       width: 100%;
-      // height: 620px;
-      // overflow: hidden;
-      // #scenes {
-      //   height: 620px;
-      //   position: relative;
-      //   transition: left 0.3s ease;
-      // }
-      // .item-wrapper {
-      //   position: absolute;
-      //   top: 0px;
-      // }
     }
     ul {
       .type {
@@ -511,8 +500,8 @@ html[lang="en-US"] #get-firefox-os {
     height: 24px;
     width: 24px;
     background-position: left -168px;
-    top: 286px; // animate to 286px
-    left: 227px;
+    top: 286px;
+    left: 50%;
   }
   ul {
     .discover {
@@ -548,6 +537,7 @@ html[lang="en-US"] #get-firefox-os {
       opacity: 0;
       width: 26px;
       top: 200px; // animate to 286px
+      z-index: 2;
     }
   }
 }
@@ -1566,7 +1556,7 @@ body.noscroll {
         display: none;
       }
     }    
-    #adapt-feature-sprites { display: none; }
+    //#adapt-feature-sprites { display: none; }
   }
   #have-it-all {
     .scroller-off {
@@ -1704,6 +1694,11 @@ body.noscroll {
     #masthead {
       ul li {
         margin: 0 20px;
+      }
+    }
+    #get-firefox-os {
+      #adapt-feature-sprite-plus {
+        top: 258px;
       }
     }
   }
