--- a/media/css/firefox/os/firefox-os-ie.less
+++ b/media/css/firefox/os/firefox-os-ie.less
@@ -5,19 +5,19 @@
 .bg-soccer {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/media/img/firefox/os/bg/1400/soccer.jpg', sizingMethod='scale');
-  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src=/media/img/firefox/os/bg/1400/soccer.jpg, sizingMethod='scale')";     
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/media/img/firefox/os/bg/1400/soccer.jpg', sizingMethod='scale')";     
 }
 
 .bg-cafe {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/media/img/firefox/os/bg/1400/cafe.jpg', sizingMethod='scale');
-  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src=/media/img/firefox/os/bg/1400/cafe.jpg, sizingMethod='scale')";   
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/media/img/firefox/os/bg/1400/cafe.jpg', sizingMethod='scale')";   
 }
 
 .bg-birthday {
   background: transparent;
   filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/media/img/firefox/os/bg/1400/birthday.jpg', sizingMethod='scale');
-  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src=/media/img/firefox/os/bg/1400/birthday.jpg, sizingMethod='scale')";   
+  -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/media/img/firefox/os/bg/1400/birthday.jpg', sizingMethod='scale')";   
 }
 
 #adaptive-wrapper.scroller-on {
@@ -28,12 +28,10 @@
     }
 }
 
-// fix ie7 z-index bug
-#get-firefox-os {
-  .item {
-    z-index: 5;
-  }
-  #every-moment {
-    z-index: 5;
-  }
+#get-firefox-os .item {
+  z-index: 5;
+}
+
+#adaptive-bgs {
+  z-index: -10 !important;
 }
